--- a/components/app/app.css
+++ b/components/app/app.css
@@ -38,14 +38,14 @@ h1 {
   content: "✓";
 }
 
-.show__del {
+.button {
   display: inline-block;
   padding: 7px;
   font-size: 13px;
   cursor: pointer;
   background-color: #e6e6e6;
 }
-.show__del:hover {
+.button:hover {
   background-color: #8EC0F4;
   color: white;
 }
