--- a/components/app/app.css
+++ b/components/app/app.css
@@ -10,6 +10,7 @@ h1 {
   display: inline-flex
 }
 .tvshow {
+  position: relative;
   margin-right: 20px;
   display: inline-block;
   padding: 20px;
@@ -30,10 +31,10 @@ h1 {
   color: #0089ff;
   display: block;
 }
-.show__viewed {
+.viewed__true {
   color: grey;
 }
-.show__viewed::after {
+.viewed__true::after {
   margin-left: 5px;
   content: "✓";
 }
@@ -47,5 +48,26 @@ h1 {
 }
 .button:hover {
   background-color: #8EC0F4;
+  color: white;
+}
+
+.show__del {
+  display: none;
+  line-height: 8px;
+  z-index: 100;
+  background-color: #F2594B;
+  position: absolute;
+  padding: 7px;
+  top: 0px;
+  right: 0px;
+  cursor: pointer;
+}
+.tvshow:hover .show__del {
+  display: block;
+  background-color: #e6e6e6;
+  color: grey;
+}
+.tvshow:hover .show__del:hover {
+  background-color: #F2594B;
   color: white;
 }
